<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Jackson Utility Submitter</string>
	<string name="name">Name:</string>
	<string name="name_hint">Ex. John Doe</string>
	<string name="address">Address:</string>
	<string name="electric">Electric:</string>
	<string name="water">Water:</string>
	<string name="gas">Gas:</string>
	<string name="address_hint">Ex. 80 W Ashley St</string>
	<string name="submit">Submit</string>
	<string name="history">History</string>
	<string name="graph">Graph</string>
	<string name="email_subject">Meter Readings</string>
	<string name="email_address">utilities@cityofjacksonmn.com</string>
	<string name="error_no_email_client">There are no email clients installed.</string>
	<string name="read_meters">Read Meters</string>
	<string name="notification_body">Tap to submit readings.</string>
	<string name="settings">Settings</string>
	<string name="enable_notifications">Enable notifications</string>
	<string name="notification_time">Notification time</string>
	<string name="notification_settings">Notification settings</string>
	<string name="gas_settings">Gas field settings</string>
	<string name="include_gas">Enable gas field</string>
	<string name="graph_electric">Electricity</string>
	<string name="graph_water">Water</string>
	<string name="graph_gas">Gas</string>
	<string name="feature_description">
<![CDATA[
		<h1>Purchase feature?</h1>
		<p>This feature unlocks the ability to view your historical meter
		readings in a set of bar graphs.</p>
		]]>
	</string>
	<string name="purchase">Purchase</string>
	<string name="error_billing">Problem occurred while contacting billing service.</string>
	<string name="no_data">No readings saved yet</string>
	<string name="add_history">Add history</string>
	<string name="edit_history">Edit history</string>
	<string name="delete">Delete</string>
	<string name="delete_warning_title">Delete history?</string>
	<string name="delete_warning">This will permanently delete this historial reading entry.</string>

</resources>